-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Optimization
-
Fully Compatible
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This error seems to happen if the number of distinct types in the column is greater than the numberBuckets.
db.foo.drop();
db.foo.insert([{ a: 1 }, { a: 2 }, { a: 3}, { a: 'a'}]);
db.foo.runCommand({analyze: "foo", key: "a", numberBuckets: 2});
MongoServerError[Location6660505]: PlanExecutor error during aggregation :: caused by :: Must have bucket boundary on last value