SERVER-99632: histogramCE: Location6660505 "Must have bucket boundary on last value" (#31586)

GitOrigin-RevId: 788d116ef174ff12eb70fb4b105809f23fe5c526